# mini-agent-platform

./: .env.docker  .env.example  .gitignore  Dockerfile  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 004_chat.py  3592e481e447_tenant_user_apikey.py  db68f5cdbf00_enable_rls.py  ec44ba203b6c_initial.py
app/: config.py  main.py
app/agents/: router.py  schemas.py  service.py
app/auth/: dependencies.py  jwt.py  rbac.py  router.py  tenant_keys.py
app/cache/: client.py  keys.py  ops.py
app/chat/: router.py  schemas.py  service.py
app/db/: base.py  models.py  session.py
app/runner/: guardrail.py  history_router.py  history_schemas.py  history_service.py  mock_llm.py  prompt_builder.py  router.py  schemas.py  service.py  stream_service.py
app/tenants/: router.py  schemas.py  service.py
app/tools/: router.py  schemas.py  service.py
frontend/: Dockerfile  middleware.ts  package-lock.json
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/agents/: page.tsx
frontend/app/(dashboard)/chat/: page.tsx
frontend/app/(dashboard)/tools/: page.tsx
frontend/app/api/agents/: route.ts
frontend/app/api/chat/: route.ts
frontend/app/api/tools/: route.ts
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: AgentForm.tsx  ChatInput.tsx  ChatMessage.tsx  ExecutionSteps.tsx  Sidebar.tsx  ToolForm.tsx
frontend/lib/: api.ts  types.ts
tasks/: main.md
tests/: conftest.py  test_guardrail.py  test_mock_llm.py  test_prompt_builder.py  test_runner.py
(+14 files in other folders)
